--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0049)https://v3.bootcss.com/examples/starter-template/ -->
+<!-- saved from url=(0039)https://v3.bootcss.com/examples/signin/ -->
 <html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +7,9 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="https://v3.bootcss.com/favicon.ico">
+    <!-- <link rel="icon" href="https://v3.bootcss.com/favicon.ico">-->
 
-    <title>Starter Template for Bootstrap</title>
+    <title>My Website Test</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <link href="/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/starter-template.css" rel="stylesheet">
+    <link href="/static/css/signin.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -33,49 +33,25 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="../main_page/">测量小程序</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="../main_page/">主页</a></li>
-            <li><a href="../hello/">功能</a></li>
-            <li><a href="../hello/">帮助</a></li>
-          </ul>
-
-          <form class="navbar-form navbar-right" method="post" action="/test/sign_out/">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-success" name="button">Sign out</button>
-          </form>
-
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
     <div class="container">
-      <div class="starter-template">
-        <h1>这是一个测绘网站。</h1>
-        <p class="lead">我们将为这个网站添加常用的测量计算功能。<br> 我们将在之后逐步添加功能程序。</p>
-      </div>
-    </div><!-- /.container -->
+
+      <form class="form-signin" method="post" action="/log_in/">
+        {% csrf_token %}
+        <h2 class="form-signin-heading" align="center">Website</h2>
+        <h2 style="font-size:5px;color:red">{{text}}</h2>
+        <!--<label for="textInput">用户名</label>-->
+        <input type="text" id="textInput" class="form-control" placeholder="用户名" required="" autofocus="" name="username">
+        <label for="inputPassword" class="sr-only">密码</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="密码" required="" name="password">
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+      </form>
+
+    </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="/static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="./Signin Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
   
 
 </body></html>
